examples/type_system/failing/26_adt_match_constructor_arity_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 2 errors • examples/type_system/failing/26_adt_match_constructor_arity_mismatch.flx
// error[E015]: Non-Exhaustive Match
//
// Match is not exhaustive: 1 missing pattern.
//
//   examples/type_system/failing/26_adt_match_constructor_arity_mismatch.flx:47:5
//    |
// 47 |     match x {
//    |     ^^^^^^^^^
// 48 |         Pair(a) -> a,
//    | ^^^^^^^^^^^^^^^^^^^^^
// 49 |     }
//    | ^^^^^
//
// Hint:
//   Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
//
//
// error[E085]: Constructor Pattern Arity Mismatch
//
// Constructor pattern `Pair` expects 2 argument(s) but got 1.
//
//   examples/type_system/failing/26_adt_match_constructor_arity_mismatch.flx:48:9
//    |
// 48 |         Pair(a) -> a,
//    |         ^^^^^^^
//
// Hint:
//   Check the constructor's declared pattern field count.
//
// Found 2 errors.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E015
// expect-error: E085

// E082: constructor arity mismatch in match pattern.

data Pair {
    Pair(Int, Int),
}

fn bad(x: Pair) -> Int {
    match x {
        Pair(a) -> a,
    }
}

fn main() {
    bad(Pair(1, 2))
}
